--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "tape -r babel-register 'src/**/*spec.js'"
+    "test": "tape -r babel-register 'src/**/*spec.js' | tap-spec"
   },
   "babel": {
     "presets": [
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "babel-register": "^6.14.0",
-    "tape": "^4.6.0"
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
   }
 }
