--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-es2015": "^6.13.2",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "stampit": "^3.0.6"
   },
   "devDependencies": {
     "babel-register": "^6.14.0",
